# Learning-Accelerator

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.en.md  README.md  README.zh-CN.md  SKILL.md  SYSTEM_PROMPT.md  manifest.json  pyproject.toml  skills.sh.json
.cursor/rules/: learning-accelerator.mdc
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
docs/: api.md  extending.md  install.md  platforms.md  release.md  technical.md  technical.zh-CN.md
examples/: code_error_diagnosis_example.md  fastapi_example.md  language_learning_example.md  no_prior_programming_example.md  non_technical_learning_example.md  persistence_cli_example.md  project_learning_example.md  python_function_example.md
learning_accelerator/: __init__.py  cli.py  dashboard.py  state.py  tui.py
references/: learning_os_protocol.md
schemas/: learning_state.schema.json
tests/: test_cli.py  test_dashboard.py  test_skill_structure.py  test_state_store.py  test_tui.py
