[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-accelerator"
version = "1.2.0"
description = "AI Learning OS skill with JSON persistence and CLI utilities."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Learning Accelerator Maintainers" }]

[project.scripts]
learning-accelerator = "learning_accelerator.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["learning_accelerator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["learning_accelerator"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
